2013-06-18  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (get_character): check for keys even when busy

	* avtterm.c (set_foreground_color):
	make dark foreground colors a little less dark

	* avtmenu.c, filechooser.c: work with dark background

	* lua/multiplication.lua: more authentic

2013-06-17  Andreas K. Foerster  <info@akfoerster.de>

	* avtgraphic.h, avtgraphic.c (avt_darker, avt_brighter):
	normal functions

	* avtgraphic.h, avtgraphic.c (avt_brightness): new function

	* avtgraphic.h, avtgraphic.c (avt_brighter_area): new function
	avatar.c (avt_show_text_cursor): light cursor on dark balloon

	* avatar.c (avt_show_text_cursor, update_menu_bar):
	work well with a dark balloon color

	* avtterm.c: work well with a dark balloon color

	* akfavatar.h (avt_darker, avt_brighter, avt_brightness):
	new functions
	avtcolors.c: new file

	* avtterm.c (get_character): sleep a little while waiting

	* lua/four_in_a_row.lua (speed_test): new function

2013-06-16  Andreas K. Foerster  <info@akfoerster.de>

	* lua/lua-avt.c (encodingname): accept SYSTEM

2013-06-15  Andreas K. Foerster  <info@akfoerster.de>

	* avtaddons.h: also use avt_ as prefix
	all code adapted

2013-06-14  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/akfavatar.pas (Menu): new function

2013-06-11  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char): better test for noncharacters

2013-06-10  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_move_in, avt_move_out): fixed

2013-06-09  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/akfavatar.pas (ReadKeyCode): new function

	* pascal/akfavatar.pas (reserve_single_keys): new function
	(CheckEsc): removed

2013-06-04  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/akfavatar.pas: updated

2013-06-03  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_put_char): handle more invisible chars

2013-05-30  Andreas K. Foerster  <info@akfoerster.de>
