@@ -1,3 +1,9 @@
+2013-06-19  Andreas K. Foerster  <info@akfoerster.de>
+
+	* lua/lua-avt.c: new macro MODULE
+	(open_lua_akfavatar): renamed from luaopen_akfavatar_embedded
+	lua/lua-akfavatar-prg.c: adapted
+
 2013-06-18  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtterm.c (get_character): check for keys even when busy
